- Fixed class reference counting errors.
- Fixed a bug with cmode +j propagation on resync
- Added a second set of join counters to send warning notices
  to +d opers when the default thresholds are met.  Still sends
  a throttle notice when cmode +j thresholds are met.
- Fixed ERR_BANLISTFULL to respond depending on which list
  (+I/+e) is full.  From Unim4trix0 (Unim4trix0@gmail.com).
- Readded clone limiting (now better than ever!), see doc/reference.conf
- Range limiting for cmode +j args (min rate 1:8, max time 60).
- Fixed spamming redudant cmode changes.
- Fixed bad handling of bogus oper messages (from Zeke Gomez).
- Fixed rehash issue with module blocks.
- Fixed samode with no mode arguments choosing one at random for you :)
- Increased throughput on data sent to clients.
- Fixed ERR_CHANNELISFULL to respond depending on which limit
  (+l/+j) is reached.  From Unim4trix0 (Unim4trix0@gmail.com),
  discovered by Watchminister (stairway@gmail.com).


Changes for 1.8.2
-----------------

- fixed entropy generation on OpenBSD and cleaned up status messages 
  (from Mark19960)
- fixed cosmetic error in /stats C reply
- fixed autoconnect blast when connect->port was specified but not 
  class->connfreq (from Mark19960)
- fixed crash on /stats request from a server (from Mark19960)
- fixed invite exceptions not working at all (from wshs)
- fixed ban exemptions not affecting bquiet (from wshs)
- fixed -e/-I sync failure during netbursts of older channels
- tweaked reference.conf
- corrected new find_port() check
- now removing simbans (restrict blocks) on rehash (from Ballsy)
- fixed cosmetic errors in nick collision kills (from Goplat)
- Converted old "X line" messages to "X block"
- Changed stray free() to MyFree()
- Corrected a tolower() reference I missed the first time around
- Removed ancient prototype causing compile failures with gcc 3.4
- Fixed 005 WATCH token (was using incorrect number)