@@ -326,6 +326,7 @@ allow {
     port        6667;       # Apply block to this port only
     passwd      secret;     # Require password for connection
     class       users;      # Place connections in this class
+    nothrottle;             # No rapid (re)connection throttling
 };
 
 # The server uses a default-deny policy for incoming connections; at least
@@ -402,6 +403,12 @@ allow {
 # The class token specifies the connection Class to place matching
 # connections in.  If not specified, the default class is used; see the
 # Class block description for details.
+# 
+# The nothrottle token causes the server to avoid throttling rapid
+# (re)connections for matching clients.  To qualify, a client must send
+# valid NICK and USER messages to register the connection, and stay
+# connected long enough to complete the ident and DNS lookups.  However,
+# a correct password is not required.
 # 
 # There may be multiple Allow blocks; they are matched in the order they
 # appear.
